--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style-23.css">
+        <link rel="./stylesheet" href="style-23.css">
     </head>
     <body>
         <header>
         <nav><ul>
-            <li><a href="paragaph-23.html">Profile</a></li>
-            <li><a href="barbedwire-23.html">Barbed wire</a></li>
-            <li><a href="barbedtapes-23.html">Berbed Tapes</a></li>
-            <li><a href="fencing-23.html">Animal Fencing</a></li>
-            <li><img src="../webpage-delta/Daco_5581185.png"></li>
+            <li><a href="./paragaph-23.html">Profile</a></li>
+            <li><a href="./barbedwire-23.html">Barbed wire</a></li>
+            <li><a href="./barbedtapes-23.html">Berbed Tapes</a></li>
+            <li><a href="./fencing-23.html">Animal Fencing</a></li>
+            <li><img src="./webpage-delta/Daco_5581185.png"></li>
             <li class="name-1">Delta Engineering Pvt. Ltd.</li>
         </ul></nav></header>
         <div>  
