--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="./stylesheet" href="style-23.css">
+        <link rel="stylesheet" href="./style-23.css">
     </head>
     <body>
         <header>
